conditions on ngfor ngstyle and ngclass added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h2>Hello</h2>
-<hr>
-<app-server ></app-server>
+<hr />
+<app-server></app-server>
+<app-display></app-display>
 <!-- 
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
